Refactor Merge Segments function